--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
                         </clipPath>
                     </defs>
                 </svg>
-            </a>
-<<<<<<< HEAD
-
-            
-=======
->>>>>>> b655f13d5240f59093520476f586cad1366ff8f0
             <!-- Navigation -->
             <nav class="header-nav">
                 <ul class="nav-list">
@@ -87,12 +81,12 @@
                     <li class="hero-list-item"><span class="item">99</span>% довольных клиентов</li>
                     <li class="hero-list-item"><span class="item">Безупречная</span> репутация</li>
                 </ul>
-                <button class="button-hero">ЗАПРОС СТАВКИ</button>
+                <button class="button button-hero">запрос ставки</button>
             </div>
         </section>
         <section class="services">
             <div class="container services-container">
-                <h2 class="services-title">Наши услуги</h2>
+                <h2 class="title services-title">Наши услуги</h2>
                 <ul class="services-list">
                     <li class="services-item services-item-1">
                         <h5 class="services-item-title">Импорт всех групп товаров</h5>
@@ -155,7 +149,7 @@
         </section>
         <section class="partners">
             <div class="container partners-container">
-                <h2 class="partners-title">Наши партнеры</h2>
+                <h2 class="title partners-title">Наши партнеры</h2>
                 <figure class="partners-list">
                     <img class="parstners-logo-title" src="./images/maersk.png" alt="Maersk logo">
                     <img class="parstners-logo-title" src="./images/auchan.png" alt="Auchan">
@@ -173,6 +167,27 @@
                     <img class="parstners-logo-title" src="./images/ideaBank.png" alt="IdeaBank">
                     <img class="parstners-logo-title" src="./images/starlingBank.png" alt="Starlig Bank">
                 </figure>
+            </div>
+        </section>
+        <section class="request">
+            <div class="container request-container">
+                <h2 class="title request-title">Запрос ставки</h2>
+                    <form class="request-form">
+                        <label class="label input-label">
+                            <input type="origin" class="form-input" placeholder="Откуда">
+                        </label>
+                        <label class="label input-label">
+                            <input type="direction" class="form-input" placeholder="Куда">
+                        </label>
+                        <label class="label input-label-two">
+                            <input type="name" class="form-input" placeholder="Ваше имя">
+                        </label>
+                        <label class="label input input-label-three">
+                            <input type="tel" class="form-input" placeholder="+38 (___) ___-__-__">
+                        </label>
+                        <textarea class="request-msg" placeholder="Детали"></textarea>
+                        <button class="button request-btn">отправить запрос на оценку</button>
+                    </form>
             </div>
         </section>
     </main>
