contact information section

--- a/index.html
+++ b/index.html
@@ -190,6 +190,32 @@
                     </form>
             </div>
         </section>
+        <section class="information">
+            <div class="container information-container">
+                <h2 class="title information-title">Контактная информация</h2>
+                <div class="contact-information">
+                    <div class="map">
+                        <p>I'm a map</p>
+                    </div>
+                    <div class="contact-info">
+                        <h3 class="info-title information-adress">Адрес компании</h3>
+                        <ul class="information-contact-list">
+                            <li class="information-cont information-name">ул. Щеголева, 14, Одесса, Одесская область, 65000</li>
+                        </ul>
+                        <h3 class="info-title">Телефоны</h3>
+                        <ul class="information-contact-list">
+                            <li class="information-cont information-item"><span class="information-tel">+38 063 3522222</span> (Направление импорта)</li>
+                            <li class="information-cont information-item"><span class="information-tel">+38 097 3622145</span> (Направление экспорта)</li>
+                            <li class="information-cont information-item"><span class="information-tel">+38 050 8905678</span> (Общая информация)</li>
+                        </ul>
+                        <h3 class="info-title">Email</h3>
+                        <ul class="information-contact-list">
+                            <li class="information-cont information-email"><a class="information-email-name" href="mailto:clients_info@msutrader.com">clients_info@msutrader.com</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
