--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                 <div class="contact-information">
                     <div class="map">
                         <p>I'm a map</p>
+                        <p>I'm a map</p>
                     </div>
                     <div class="contact-info">
                         <h3 class="info-title information-adress">Адрес компании</h3>
