--- a/index.html
+++ b/index.html
@@ -195,23 +195,25 @@
             <div class="container information-container">
                 <h2 class="title information-title">Контактная информация</h2>
                 <div class="contact-information">
-                    <div class="map">
-                        <p>I'm a map</p>
-                        <p>I'm a map</p>
-                    </div>
+
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23624.92607343744!2d42.70048697624119!3d42.254700432961755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x405c8ce30e54af2d%3A0xfbec41b2d626656f!2z0JrRg9GC0LDQuNGB0LgsINCT0YDRg9C30LjRjw!5e0!3m2!1sru!2sua!4v1608977483694!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
                     <div class="contact-info">
-                        <h3 class="info-title information-adress">Адрес компании</h3>
+
                         <ul class="information-contact-list">
+                            <li><h3 class="info-title information-adress">Адрес компании</h3></li>
                             <li class="information-cont information-name">ул. Щеголева, 14, Одесса, Одесская область, 65000</li>
                         </ul>
-                        <h3 class="info-title">Телефоны</h3>
+
                         <ul class="information-contact-list">
-                            <li class="information-cont information-item"><span class="information-tel">+38 063 3522222</span> (Направление импорта)</li>
+                            <li><h3 class="info-title">Телефоны</h3></li>
+                            <li class="information-cont information-item"><a href="tel:+3000000000" class="information-tel">+38 063 3522222</a> (Направление импорта)</li>
                             <li class="information-cont information-item"><span class="information-tel">+38 097 3622145</span> (Направление экспорта)</li>
                             <li class="information-cont information-item"><span class="information-tel">+38 050 8905678</span> (Общая информация)</li>
                         </ul>
-                        <h3 class="info-title">Email</h3>
+
                         <ul class="information-contact-list">
+                            <li><h3 class="info-title">Email</h3></li>
                             <li class="information-cont information-email"><a class="information-email-name" href="mailto:clients_info@msutrader.com">clients_info@msutrader.com</a></li>
                         </ul>
                     </div>
