--- a/index.html
+++ b/index.html
@@ -218,6 +218,59 @@
                 </div>
             </div>
         </section>
+        <section class="footer">
+            <div class="container footer-container">
+                <div class="footer-one">
+                    <div class="footer-logo">
+                        <a href="#">
+                            <img src="./images/footer-logo.svg" alt="logo">
+                        </a>
+                    </div>
+                    <div class="footer-for-clients">
+                        <ul class="for-clients-list">
+                            <li><h3 class="for-clients-title">Клиентам</h3></li>
+                            <li class="for-clients"><a href="#" class="for-clients-item">Услуги</a></li>
+                            <li class="for-clients"><a href="#" class="for-clients-item">О компании</a></li>
+                            <li class="for-clients"><a href="#" class="for-clients-item">Партнеры</a></li>
+                            <li class="for-clients"><a href="#" class="for-clients-item">Новости</a></li>
+                            <li class="for-clients"><a href="#" class="for-clients-item">Контакты</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-worktime-socmedia">
+                        <ul class="worktime-list">
+                            <li>
+                                <h3 class="for-clients-title">Время работы</h3>
+                            </li>
+                            <li class="worktime-item for-clients">Пн-Пт - 09:00-18:00</li>
+                            <li class="worktime-item for-clients">Сб-Вс - выходной</li>
+                        </ul>
+                        <h3 class="for-clients-title footer-socmedia-title">Мы в соцсетях</h3>
+                        <ul class="socmedia-list">
+                            <li><a href="#"><img src="./images/facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#"><img src="./images/youtube.svg" alt="youtube"></a></li>
+                            <li><a href="#"><img src="./images/twitter.svg" alt="twitter"></a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-contacts">
+                        <ul class="contacts-list">
+                            <li>
+                                <h3 class="for-clients-title">Контакты</h3>
+                            </li>
+                            <li class="footer-contacts"><a class="footer-tel" href="tel:+38 063 3522222">+38 063 3522222</a></li>
+                            <li class="footer-contacts footer-adress">ул. Щеголева, 14, Одесса, Одесская область, 65000</li>
+                        </ul>
+                        <button class="button footer-botton">запрос ставки</button>
+                    </div>
+                </div>
+                <div class="footer-two">
+                    <p class="copyright">&copy; 2020 МСУ. Логистические услуги.</p>
+                    <ul class="footer-two-more">
+                        <li class="footer-more-item"><a href="#">Стать нашим партнером</a></li>
+                        <li class="footer-more-item"><a href="#">Политика конфиденциальности</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
