responsible design of three sections

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- MAin -->
     <main>
         <section class="hero">
-            <div class="container">
+            <div class="container hero-container">
                 <h1 class="hero-title">Оптимизируем логистику
                 Вашего бизнеса!</h1>
                 <ul class="hero-list">
