responcive design finish

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="container information-container">
                 <h2 class="title information-title">Контактная информация</h2>
                 <div class="contact-information">
-                    <iframe
+                    <iframe class="map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43962.14275380548!2d30.700002556101165!3d46.47575870610196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9135ad2d11b60262!2z0JzQntCg0KHQmtCe0Jkg0KHQldCg0JLQmNChINCj0JrQoNCQ0JjQndCr!5e0!3m2!1sru!2slt!4v1609001346516!5m2!1sru!2slt"
                         width="610" height="360" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
@@ -222,11 +222,9 @@
     <footer class="footer">
             <div class="container footer-container">
                 <div class="footer-one">
-                    <div class="footer-logo">
-                        <a href="#">
-                            <img src="./images/footer-logo.svg" alt="logo">
+                        <a class="footer-logo" href="#">
+                            <img class="footer-logo-img" src="./images/footer-logo.svg" alt="logo">
                         </a>
-                    </div>
                     <ul class="for-clients-list">
                         <li>
                             <h3 class="for-clients-title">Клиентам</h3>
